--- a/adminka/app/views/users/index.html.erb
+++ b/adminka/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <%= render '/partials/nav' %>
 
 <main class='users'>
-    <div   data-controller='users'>
+    <div class='users-wrap'   data-controller='users'>
         <div class='users__header'>
             <%= render 'search' %>
             <%= render 'languages'%>
