--- a/adminka/app/views/partials/_nav.html.erb
+++ b/adminka/app/views/partials/_nav.html.erb
@@ -1,11 +1,9 @@
 <nav class='nav'>
     <ul>
-        <li>
-           <%= link_to "Users", "/users",class:"nav__link nav__link#{active?('/users')}" %> 
-        </li>  
-
-        <li>
-            <%= link_to "Scamers", "/scamers", class:"nav__link nav__link#{active?('/scamers')}"%> 
-        </li>  
+        <% for link in @links  %>
+            <li>
+               <%= link_to link[:label], link[:path],class:"nav__link nav__link#{active?(link[:path])}" %> 
+            </li>  
+        <% end%>
     </ul>
 </nav>
