--- a/adminka/app/views/users/index.html.erb
+++ b/adminka/app/views/users/index.html.erb
@@ -22,7 +22,7 @@
                     <div class='users__cell users__cell-checkbox'><%= render '/partials/checkbox'%></div>
                     <div class='users__cell users__cell-telegram-id'><%= user[:telegram_id] %></div>
                     <div class='users__cell users__cell-username'>@<%= user[:username] %></div>
-                    <div class='users__cell users__cell-status'><%= render 'select_status', locals:{status_options:default_options(@status_options, user[:status])} %></div>
+                    <div class='users__cell users__cell-status'><%= render 'select_status', status_options:default_options(@status_options, user[:status]), id:user.id %></div>
                     <div class='users__cell users__cell-registration'><%= user[:created_at].strftime('%d.%m.%Y') %></div>
            </div>
            <% end%>
