--- a/adminka/app/views/partials/_checkbox.html.erb
+++ b/adminka/app/views/partials/_checkbox.html.erb
@@ -1,4 +1,4 @@
 <label class="checkbox-container">
-  <input type="checkbox">
+  <input type="checkbox" id=<%= id%> class="users__cell-checkbox_<%= type %>">
   <span class="checkmark"></span>
 </label>
