--- a/adminka/app/assets/stylesheets/users.scss
+++ b/adminka/app/assets/stylesheets/users.scss
@@ -2,6 +2,9 @@
   padding: 20px;
   flex: 1;
   box-sizing: border-box;
+  &__stats {
+    color: white;
+  }
   &-wrap {
     width: -webkit-fill-available;
   }
@@ -20,6 +23,9 @@
     min-height: 40px;
     align-items: stretch;
     background-color: #b5bec5;
+    &_none {
+      display: none;
+    }
     &:last-child {
       border-radius: 0 0 10px 10px;
     }
@@ -49,6 +55,17 @@
     }
     &-registration {
       flex: 2;
+    }
+  }
+  &__show-modal-button {
+    background-color: var(--bg-nav);
+    border: none;
+    border-radius: 7px;
+    color: white;
+    &_active {
+      background-color: var(--bg-active);
+      color: black;
+      cursor: pointer;
     }
   }
 }
