--- a/adminka/app/views/users/index.html.erb
+++ b/adminka/app/views/users/index.html.erb
@@ -3,10 +3,10 @@
 <main class='users'>
 
     <div class='users-wrap'   data-controller='users'>
-        <%= render 'modal-send-message'%>
+        <%= render '/partials/modal-send-message'%>
         <div class='users__header'>
-            <%= render 'search' %>
-            <%= render 'show_modal'%>
+            <%= render '/partials/search' %>
+            <%= render '/partials/show_modal'%>
             <p class='users__stats'>stats will be here</p>
             <%= render 'languages'%>
         </div>
