--- a/adminka/app/views/moderators/_modal-create-moderator.html.erb
+++ b/adminka/app/views/moderators/_modal-create-moderator.html.erb
@@ -2,12 +2,12 @@
   <div class="modal-create-moderator modal-create-moderator_overlay"></div>
   <form class="modal-create-moderator__window">
     <div class="modal-create-moderator__wrap-title">
-      <div class="modal-create-moderator__title">Send message</div>
+      <div class="modal-create-moderator__title">Create moderator</div>
       <div class="modal-create-moderator__close-img"></div>
     </div>
-    <textarea class="modal-create-moderator__area" name="" id="" cols="30" rows="10" required></textarea>
+    <input class="modal-create-moderator__input" name="" id="" cols="30" rows="10" placeholder='telegram_id' required/>
     <div class="modal-create-moderator__wrap-buttons">
-      <input type="submit" class="modal-create-moderator__send-button" value="Send" />
+      <input type="submit" class="modal-create-moderator__send-button" value="Create" />
       <div class="modal-create-moderator__close-button">Cancel</div>
     </div>
   </form>
