--- a/adminka/app/views/partials/_show_modal.html.erb
+++ b/adminka/app/views/partials/_show_modal.html.erb
@@ -1,1 +1,1 @@
-<button class='users__show-modal-button' data-controller='modalsendmessage'>Send message</button>
+<button class='users__show-modal-button'>Send message</button>
