--- a/adminka/app/views/moderators/index.html.erb
+++ b/adminka/app/views/moderators/index.html.erb
@@ -1,7 +1,7 @@
 <%= render '/partials/nav'%>
 
-<main class='moderators'>
-    <div class='moderators-wrap'   data-controller='moderators'>
+<main class='moderators' data-controller='moderators'>
+    <div class='moderators-wrap'>
         <%= render 'modal-create-moderator'%>
         <%= render '/partials/modal-send-message'%>
         <div class='moderators__header'>
@@ -16,20 +16,22 @@
                     <div class='moderators__cell moderators__cell-checkbox'><%= render '/partials/checkbox', id:'general', type:'general'%></div>
                     <div class='moderators__cell moderators__cell-telegram-id'>telegram_id</div>
                     <div class='moderators__cell moderators__cell-username'>@username</div>
+                    <div class='moderators__cell moderators__cell-stat'>оправданных(X) | заблокированных(Y) | решений за день(Z)<br>(X) | (Y) | (Z) </div>
                     <div class='moderators__cell moderators__cell-status'>status</div>
                     <div class='moderators__cell moderators__cell-registration'>registration</div>
            </div>
 
            <% for moderator in @moderators%>
 
-            <div class='moderator__row moderator__row_item moderator__row_none' 
+            <div class='moderators__row moderators__row_item moderators__row' 
             data=<%=formatting_data(moderator) %>     
             >
-                    <div class='moderators__cell moderators__cell-checkbox'><%= render '/partials/checkbox', id:user.id, type:'local' %></div>
-                    <div class='moderators__cell moderators__cell-telegram-id'><%= user[:telegram_id] %></div>
-                    <div class='moderators__cell moderators__cell-username'>@<%= user[:username] %></div>
-                    <div class='moderators__cell moderators__cell-status'><%= render 'select_status', status_options:default_options(@status_options, moderator[:status]), id:moderator.id %></div>
-                    <div class='moderators__cell moderators__cell-registration'><%= user[:created_at].strftime('%d.%m.%Y') %></div>
+                    <div class='moderators__cell moderators__cell-checkbox'><%= render '/partials/checkbox', id:moderator.id, type:'local' %></div>
+                    <div class='moderators__cell moderators__cell-telegram-id'><%= moderator[:telegram_id] %></div>
+                    <div class='moderators__cell moderators__cell-username'>@<%= moderator[:username] %></div>
+                    <div class='moderators__cell moderators__cell-stat moderators__cell-stat_values'><%= moderator[:access_amount]%> | <%= moderator[:reject_amount] + moderator[:block_amount] %> | <%= moderator[:decisions_per_day_amount]%> </div>
+                    <div class='moderators__cell moderators__cell-status'><%= render '/partials/select_status', status_options:default_options(@status_options, moderator[:status]), id:moderator.id %></div>
+                    <div class='moderators__cell moderators__cell-registration'><%= moderator[:created_at].strftime('%d.%m.%Y') %></div>
            </div>
            <% end%>
         </div>
