--- a/adminka/app/views/moderators/_create.html.erb
+++ b/adminka/app/views/moderators/_create.html.erb
@@ -1,1 +1,1 @@
-<button class='show-modal-create-moderator'>Create</button>
+<button class='show-modal-create-moderator' data-controller='createmoderator'>Create</button>
