--- a/adminka/app/assets/stylesheets/scamers.scss
+++ b/adminka/app/assets/stylesheets/scamers.scss
@@ -14,8 +14,10 @@
     min-height: 40px;
     align-items: stretch;
     background-color: #b5bec5;
-    &_none {
-      display: none;
+    &_item {
+      &_none {
+        display: none;
+      }
     }
     // &:last-child {
     //   border-radius: 0 0 10px 10px;
@@ -40,10 +42,24 @@
     }
     &-telegraph-post {
       flex: 2;
+      a {
+        color: black;
+        text-decoration: none;
+        &:hover {
+          opacity: 0.5;
+        }
+      }
     }
 
     &-telegram-post {
       flex: 2;
+      a {
+        color: black;
+        text-decoration: none;
+        &:hover {
+          opacity: 0.5;
+        }
+      }
     }
     &-became-a-scamer {
       flex: 1;
