--- a/adminka/app/views/moderators/index.html.erb
+++ b/adminka/app/views/moderators/index.html.erb
@@ -7,7 +7,7 @@
         <div class='moderators__header'>
             <%= render '/partials/search' %>
             <%= render '/partials/show_modal'%>
-            <p class='moderators__stats'>stats will be here</p>
+            <%# <p class='moderators__stats'>stats will be here</p> %>
             <%= render 'create'%>
         </div>
 
