--- a/adminka/app/assets/stylesheets/users.scss
+++ b/adminka/app/assets/stylesheets/users.scss
@@ -2,6 +2,10 @@
   padding: 20px;
   flex: 1;
   box-sizing: border-box;
+  &__buttons-block1 {
+    display: flex;
+    flex-direction: column;
+  }
   &__stats {
     color: white;
   }
@@ -61,8 +65,11 @@
   &__show-modal-button {
     background-color: var(--bg-nav);
     border: none;
-    border-radius: 7px;
+    border-radius: 5px;
     color: white;
+    height: 45px;
+    width: 250px;
+    margin-top: 10px;
     &_active {
       background-color: var(--bg-active);
       color: black;
