--- a/adminka/app/views/users/index.html.erb
+++ b/adminka/app/views/users/index.html.erb
@@ -35,7 +35,7 @@
                     <div class='users__cell users__cell-checkbox'><%= render '/partials/checkbox', id:user.id, type:'local' %></div>
                     <div class='users__cell users__cell-telegram-id'><%= user[:telegram_id] %></div>
                     <div class='users__cell users__cell-username'>@<%= user[:username] %></div>
-                    <div class='users__cell users__cell-status'><%= render '/partials/select_status', status_options:default_options(@status_options, user[:status]), id:user.id %></div>
+                    <div class='users__cell users__cell-status'><%= render '/partials/select_status2', status_options:default_options(@status_options, user[:status]), id:user.id %></div>
                     <div class='users__cell users__cell-registration'><%= user[:created_at].strftime('%d.%m.%Y') %></div>
            </div>
            <% end%>
