fix update users status in adminka

--- a/adminka/app/views/partials/_select_status2.html.erb
+++ b/adminka/app/views/partials/_select_status2.html.erb
@@ -1,8 +1,8 @@
-<div class="select-wrapper" data-controller="selectstatus">
+<div class="select-wrapper" data-controller="selectstatus2">
   <select class="custom-select" id=<%=id%>>
     <% for option in status_options %>
       <option value="<%= option %>"><%= option %></option>
     <% end %>
   </select>
-<div class="spinner" data-selectstatus-target="spinner"></div>
+<div class="spinner" data-selectstatus2-target="spinner2"></div>
 </div>
