--- a/adminka/app/assets/stylesheets/users.scss
+++ b/adminka/app/assets/stylesheets/users.scss
@@ -6,8 +6,12 @@
     display: flex;
     flex-direction: column;
   }
+  &__lookup {
+    color: white;
+  }
   &__stats {
     color: white;
+    margin: 0;
   }
   &-wrap {
     width: -webkit-fill-available;
