add: publish in private channel from userbot-channels

--- a/adminka/app/assets/stylesheets/scamers.scss
+++ b/adminka/app/assets/stylesheets/scamers.scss
@@ -34,6 +34,7 @@
     align-items: center;
     border-right: 1px var(--bg-main) solid;
     border-bottom: 1px var(--bg-main) solid;
+    word-break: break-word;
     &-telegram-id {
       flex: 1;
     }
