--- a/adminka/app/views/users/index.html.erb
+++ b/adminka/app/views/users/index.html.erb
@@ -14,9 +14,9 @@
 
             <ul class='users__stats'>
                 complaints per
-                <li>day   - <%= @complaints_per_day.size %></li>
-                <li>week  - <%= @complaints_per_week.size %></li>
-                <li>month - <%= @complaints_per_month.size %></li>
+                <li>day   : <%= @complaints_per_day %></li>
+                <li>week  : <%= @complaints_per_week %></li>
+                <li>month : <%= @complaints_per_month %></li>
             </ul>
             <%= render 'languages'%>
         </div>
@@ -35,8 +35,8 @@
                     <div class='users__cell users__cell-checkbox'><%= render '/partials/checkbox', id:user.id, type:'local' %></div>
                     <div class='users__cell users__cell-telegram-id'><%= user[:telegram_id] %></div>
                     <div class='users__cell users__cell-username'>@<%= user[:username] %></div>
-                    <div class='users__cell users__cell-status'><%= render '/partials/select_status2', status_options:default_options(@status_options, user[:status]), id:user.id %></div>
-                    <div class='users__cell users__cell-registration'><%= user[:created_at].strftime('%d.%b.%Y') %></div>
+                    <div class='users__cell users__cell-status'><%= render '/partials/select_status2', options:@status_options,  user_status:user[:status], id:user.id %></div>
+                    <div class='users__cell users__cell-registration'><%= user[:created_at].strftime('%d %b %Y') %></div>
            </div>
            <% end%>
         </div>
