--- a/adminka/app/views/partials/_select_status2.html.erb
+++ b/adminka/app/views/partials/_select_status2.html.erb
@@ -1,8 +1,11 @@
 <div class="select-wrapper" data-controller="selectstatus2">
-  <select class="custom-select" id=<%=id%>>
-    <% for option in status_options %>
-      <option value="<%= option %>"><%= option %></option>
+  <select class="custom-select" id="<%= id %>">
+    <% options.each do |status| %>
+      <% selected = user_status == status[:value] %>
+      <option value="<%= status[:value] %>" <%= 'selected' if selected %>>
+        <%= status[:label] %>
+      </option>
     <% end %>
   </select>
-<div class="spinner" data-selectstatus2-target="spinner2"></div>
+  <div class="spinner" data-selectstatus2-target="spinner2"></div>
 </div>
